[gd_scene load_steps=9 format=3 uid="uid://57gcvfrcnsp3"]

[ext_resource type="Script" uid="uid://dwyl60h0e4ehq" path="res://Scripts/summon_manager.gd" id="1_h01js"]
[ext_resource type="Script" uid="uid://rjjk06jjiu7a" path="res://Scripts/state_machine.gd" id="2_d57ri"]
[ext_resource type="Script" uid="uid://dgaiyh6m7i7o8" path="res://Scripts/idle_behavior_tree.gd" id="3_ep7dd"]
[ext_resource type="Script" uid="uid://cjn7u4ofgmk8j" path="res://Scripts/explore_behavior_tree.gd" id="4_ll5sk"]
[ext_resource type="PackedScene" uid="uid://b3li4lyid4cqt" path="res://action_behavior_tree.tscn" id="5_duy7s"]
[ext_resource type="Script" uid="uid://cmiqs2iwu1exq" path="res://pickup.gd" id="6_quryq"]
[ext_resource type="PackedScene" uid="uid://bfcgmuj73apqj" path="res://summon_body.tscn" id="7_ep7dd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uawbc"]
radius = 55.0364

[node name="SummonManager" type="Node2D"]
script = ExtResource("1_h01js")

[node name="SummonBehaviorTree" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_d57ri")

[node name="IdleBehaviorTree" type="Node" parent="SummonBehaviorTree"]
unique_name_in_owner = true
script = ExtResource("3_ep7dd")

[node name="WaitTimer" type="Timer" parent="SummonBehaviorTree/IdleBehaviorTree"]
unique_name_in_owner = true
one_shot = true

[node name="ExploreBehaviorTree" type="Node" parent="SummonBehaviorTree"]
unique_name_in_owner = true
script = ExtResource("4_ll5sk")

[node name="ExploreTimer" type="Timer" parent="SummonBehaviorTree/ExploreBehaviorTree"]
unique_name_in_owner = true
one_shot = true

[node name="ActionBehaviorTree" parent="SummonBehaviorTree" instance=ExtResource("5_duy7s")]
unique_name_in_owner = true

[node name="PickUp" parent="SummonBehaviorTree/ActionBehaviorTree" instance=ExtResource("5_duy7s")]
unique_name_in_owner = true
script = ExtResource("6_quryq")

[node name="SummonBody" parent="." instance=ExtResource("7_ep7dd")]
unique_name_in_owner = true

[node name="Detection" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 61
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_uawbc")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="state_change" from="SummonBehaviorTree" to="." method="_on_summon_behavior_tree_state_change"]
[connection signal="timeout" from="SummonBehaviorTree/IdleBehaviorTree/WaitTimer" to="SummonBehaviorTree" method="_on_wait_timer_timeout"]
[connection signal="timeout" from="SummonBehaviorTree/IdleBehaviorTree/WaitTimer" to="SummonBehaviorTree/IdleBehaviorTree" method="_on_idle_wait_time_timeout"]
[connection signal="timeout" from="SummonBehaviorTree/ExploreBehaviorTree/ExploreTimer" to="SummonBehaviorTree" method="_on_explore_timer_timeout"]
[connection signal="action_behavior_started" from="SummonBehaviorTree/ActionBehaviorTree" to="SummonBehaviorTree/ActionBehaviorTree/PickUp" method="_on_action_behavior_tree_action_behavior_started"]
[connection signal="pickup_action_started" from="SummonBehaviorTree/ActionBehaviorTree/PickUp" to="." method="_on_pick_up_pickup_action_started"]
[connection signal="pickup_action_started" from="SummonBehaviorTree/ActionBehaviorTree/PickUp" to="SummonBody" method="_on_pick_up_pickup_action_started"]
[connection signal="reached_target_position" from="SummonBody" to="." method="_on_summon_body_reached_target_position"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
