class_name Pickup extends ActionBehaviorTree

signal pickup_action_started
# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_action_behavior_tree_action_behavior_started() -> void:
	pass # Replace with function body.
